--- a/src/app/four-players/four-players.component.css
+++ b/src/app/four-players/four-players.component.css
@@ -1,91 +1,165 @@
+.topic{
+  width: 100%;
+  margin: auto;
+  background-color: #02C39A;
+  color: white;
+  height: 5rem;
+  font-size: 25px;
+  text-align: center;
+}
+.play{
+  /* margin-bottom:30%; */
+  margin-left: 30%;
+  height:3rem;
+  background-color: #02C39A;
+  color: white;
+  font-style: bold;
+  font-size: 25px;
+  width: 40%;
+}
+.opponent{
+  color: #02C39A;
+  font-size: 55px;
+}
 #clock{
-  width:10rem;
-  background-color: black;
-  font-family: 'Roboto', sans-serif;
-  font-size: 2rem;
+  width:30%;
+  height: 3rem;
+  margin: auto;
+  background-color:#02C39A;
+  /* background-color: #05668D; */
+  font-size: 20px;
   color:white;
   text-align: center;
-  position: fixed;
-  bottom: 0;
-  margin: auto;
-  /* margin-left: 40%;
+  /* position: fixed; */
+  /* bottom: 0;
+  margin-left: 40%;
   margin-right: 40%; */
-}
+ }
 
 .questions{
   width:80%;
-  height: 30rem;
-  background-color: aqua;
-  background-image: url('/src/assets/img/ques.jpg');
-  opacity: 0;
-  background-size: cover;
-  margin-left:10rem;
-  border-bottom:5rem;
-  color: white;
-  font-family: 'Roboto', sans-serif;
- }
-
-/* 
-
-.abc
-{
-text-align:center;
-justify-content:center;
-} */
-
-.radio-group{
+  /* opacity: 0; */
+  margin: auto;
+  font-size: 25px;
+  color:white;
+  background-color:#02C39A;
+}
+.options{
   display: inline-flex;
   flex-direction: column;
+  width:80%;
+  /* opacity: 0; */
+  margin: auto;
+  color:white;
+  background-color:#02C39A;
+  }
+
+button{
+  margin-top:3rem;
+  margin-left: 18rem;
+   /* width:5rem; */
+  height:3rem;
+ }
+
+ button:hover{
+   background:#05668D;
+   color:white;
  }
 
  mat-grid-tile {
-  background: rgb(166, 255, 0);
+  background-color:#028090;
+  color: white;
+  width:80%;
+  /* opacity: 0; */
+  margin: auto;
 }
+
 mat-grid-list{
-  width: 80%;
-  margin-left: 10rem;
-  font-size: 20px;
-  font-family: 'Roboto', sans-serif;
+  width:80%;
+  /* opacity: 0; */
+  margin: auto;
+ /* font-size: 25px; */
+ background-color:#028090;
 }
 
-@media(max-width:600px){
-  .questions{
-    width:80%;
-    height: 20rem;
-    /* background-color: aqua; */
-    background-image: url('/src/assets/img/single.jpg');
-    background-size: cover;
-    margin-left:2rem;
-    border-bottom:1rem;
-    font-size: 15px;
-    color: white;
-   }
+.end{
+  position: absolute;
+  top: 90%;
+    left: 90%
+}
 
-   mat-grid-list{
-    width: 80%;
-    height: 5rem;
+.noOpponent{
+  color: #02C39A;
+  font-size: 55px;
+}
+.back{
+  margin-left: 30%;
+  height:3rem;
+  background-color: #02C39A;
+  color: white;
+  font-style: bold;
+  font-size: 25px;
+  width: 30%;
+}
+.result{
+  background-color: #02C39A;
+  opacity: 0;
+  width:80%;
+  /* opacity: 0; */
+  margin: auto;
+  /* width:30%;
+  height:30%; */
+  /* margin-top:13rem;
+  margin-left:15rem; */
+  color:white;
+  font-size: 40px;
+}
+.result .button{
+  margin-left: 10%;
+   background-color: #02C39A;
+   color: white;
+   font-style: bold;
+   font-size: 25px;
+   width: 30%;
+}
+
+
+@media(max-width:767px){
+  .play{
+    height:3rem;
+    margin-left: 40%;
     font-size: 15px;
-    margin-left:2rem;
+    width: 30%;
+   }
+  .questions{
+    font-size: 20px;
   }
 
-    .ques{
-    font-size:20px;
-     font-family:'Roboto', sans-serif; 
-    }
-
-    #clock{
-
-      width:25rem;
-      background-color: black;
-      font-family: 'Roboto', sans-serif;
-      font-size: 2rem;
-      color:white;
-      text-align: center;
-      position: fixed;
-      bottom: 0;
-      margin-left: 0%;
-      margin-right: 12rem;
-    }
+ .result{
+   font-size: 20px;
  }
 
- 
+ mat-grid-list{
+  width:80%;
+  /* opacity: 0; */
+  margin: auto;
+ font-size: 15px;
+ text-align: center;
+
+}
+#clock{
+  font-size: 15px;
+  height: 2rem;
+}
+
+.noOpponent{
+  /* color: #02C39A; */
+  font-size: 25px;
+}
+.opponent{
+  /* color: #02C39A; */
+  font-size: 25px;
+}
+
+}
+
