--- a/src/app/four-players/four-players.component.html
+++ b/src/app/four-players/four-players.component.html
@@ -1,13 +1,14 @@
-<input *ngIf= "!TopicSelected" type="text"  name="EnterTopic" [(ngModel)]="topic">
-<button mat-raised-button *ngIf="!TopicSelected" (click)="sleep()">Let's Play</button>
+<input class="topic" *ngIf= "!TopicSelected" type="text"  name="EnterTopic" [(ngModel)]="topic">
+<button class="play" mat-raised-button *ngIf="!TopicSelected" (click)="sleep()">Let's Play</button>
 
-<div *ngIf="!start && Waiting" style="color:white; font-size:1rem;">
+<div class="opponent" *ngIf="!start && Waiting">
    Waiting for opponent to join...
 </div>
+
 <div *ngIf="start && !gameOver">
   <mat-card class="questions">
       <h2 >{{currentQuestion.question}}</h2><br>
-      <mat-radio-group class="radio-group">
+      <mat-radio-group class="options">
          <mat-radio-button class="radio-button" *ngFor="let o of options" [value]="o" (click)="scoreCalculator(o)">
            {{o.optionName}}<br>
           </mat-radio-button>
@@ -16,7 +17,7 @@
   </mat-card>
 
 
-  <mat-grid-list cols="3" rowHeight="5:1">
+  <mat-grid-list cols="3" rowHeight="5:1.5">
     <mat-grid-tile>{{username}}: <br> {{ score }}</mat-grid-tile>
     <!-- <mat-grid-tile>{{arr[0]}}:<br>{{ score1[0] }}</mat-grid-tile>
     <mat-grid-tile>{{arr[1]}}:<br>{{ score1[1] }}</mat-grid-tile> -->
@@ -35,8 +36,10 @@
   {{counter}}
   </div>
 
+  <div class="result">
 <mat-card *ngIf="start && gameOver">Your Score: {{score}}<br>Highest Score: {{max1}}</mat-card>
 <!-- <mat-card *ngIf="gameOver && score<forignUserScore">Opponent Wins</mat-card>
 <mat-card *ngIf="gameOver && score===forignUserScore">It's a Draw</mat-card> -->
+</div>
 
 
