--- a/src/app/single-player/single-player.component.css
+++ b/src/app/single-player/single-player.component.css
@@ -1,3 +1,12 @@
+.topic{
+  width: 100%;
+  margin: auto;
+  background-color: #02C39A;
+  color: white;
+  height: 5rem;
+  font-size: 25px;
+  text-align: center;
+}
 .play{
   /* margin-bottom:30%; */
   margin-left: 30%;
@@ -6,7 +15,7 @@
   color: white;
   font-style: bold;
   font-size: 25px;
-  width: 30%;
+  width: 40%;
 }
 .questions{
   width:80%;
@@ -91,9 +100,9 @@ button{
   @media(max-width:767px){
     .play{
       height:3rem;
-      margin-left: 40%;
+      margin-left: 30%;
       font-size: 15px;
-      width: 30%;
+      width: 40%;
      }
     .questions{
       font-size: 15px;
