--- a/src/app/three-players/three-players.component.html
+++ b/src/app/three-players/three-players.component.html
@@ -1,13 +1,14 @@
-<input *ngIf="!TopicSelected" type="text" name="EnterTopic" [(ngModel)]="topic">
-<button mat-raised-button *ngIf="!TopicSelected" (click)="sleep()">Let's Play</button>
+<input class="topic"  *ngIf="!TopicSelected" type="text" name="EnterTopic" [(ngModel)]="topic">
+<button  class="play" mat-raised-button *ngIf="!TopicSelected" (click)="sleep()">Let's Play</button>
 
-<div *ngIf="!start && Waiting" style="color:white; font-size:1rem;">
+<div *ngIf="!start && Waiting" >
   Waiting for opponent to join...
 </div>
+
 <div *ngIf="start && !gameOver">
   <mat-card class="questions">
       <h2 >{{currentQuestion.question}}</h2><br>
-      <mat-radio-group class="radio-group">
+      <mat-radio-group class="options">
          <mat-radio-button class="radio-button" *ngFor="let o of options" [value]="o" (click)="scoreCalculator(o)">
            {{o.optionName}}<br>
           </mat-radio-button>
@@ -25,7 +26,7 @@
 
 </div>
 
-<mat-card *ngIf="!start && gameOver">
+<mat-card class="noOpponent" *ngIf="!start && gameOver">
   Players not found...Go Back
   <button mat-raised-button color="primary" [routerLink]="['/play']">
     Go Back</button>
@@ -35,6 +36,8 @@
   {{counter}}
 </div>
 
+<div class="result">
 <mat-card *ngIf="start && gameOver">Your Score: {{score}}<br>Highest Score: {{max1}}</mat-card>
 <!-- <mat-card *ngIf="gameOver && score<forignUserScore">Opponent Wins</mat-card>
 <mat-card *ngIf="gameOver && score===forignUserScore">It's a Draw</mat-card> -->
+</div>
