--- a/src/app/single-player/single-player.component.css
+++ b/src/app/single-player/single-player.component.css
@@ -15,16 +15,15 @@
   /* color: white; */
 /*  font-style: bold;
   font-size: 25px;
-  width: 40%;
-} */
-
-.waiting {
-  background-image: url('/src/assets/img/preloader.gif');
+*/
+  .waiting {
+  background-image: url('/src/assets/img/liquidloader.gif');
   background-repeat: no-repeat;
-  height:10rem;
+  height:100vh;
+  background-size: cover;
   /* opacity:0; */
-  margin-top:30%;
-  margin-left:40%;
+  /* margin-top:10%; */
+  /* margin-left:40%; */
 }
 .questions{
   width:80%;
